# IPFactory

./: .cursorrules  .dev_status.md  .dockerignore  .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  DEVELOPER_GUIDE.md  DOCKER_GUIDE.md  WORLDOS_ARCHITECTURE_OVERVIEW.md  WORLDOS_EXPLORATION_INDEX.md  WORLDOS_QUICK_REFERENCE.md  WORLDOS_V6_SIMULATION_GUIDE.md  verify_autonaut.php
.understand-anything/: .understandignore  engine-knowledge-graph.json  frontend-knowledge-graph.json  meta.json  narrative-loom-knowledge-graph.json
backend/: .dockerignore  .rr.yaml  check_scars.php  composer.json  debug_actor_material.php  debug_living_system.php  fix_namespaces.php  phpunit.xml  pint.json  refactor_services.php  restore_ai.php  seed_loom_agents.php  update_tickrates.php  verify_autonaut.php
deployment/: .dockerignore  backend.prod.Dockerfile  docker-compose.prod.yml  engine.prod.Dockerfile  frontend.prod.Dockerfile
engine/: Cargo.toml
engine/worldos-grpc/: Cargo.toml  build.rs
engine/worldos-grpc/src/: behavior_graph.rs  belief.rs  calamity.rs  civilization.rs  diplomacy.rs  engine.rs  kafka.rs  lib.rs  social_impact.rs  technology.rs  transport_grpc.rs  transport_http.rs  urban_growth.rs
engine/worldos-grpc/tests/: serialization_roundtrip.rs
frontend/: .dockerignore  eslint.config.mjs  package-lock.json  package.json  plan-uiux-consistency.md  tsconfig.json  tsconfig.test.json  vitest.config.ts
narrative-loom/: .dockerignore  Dockerfile  benchmark_cache.py  graph.py  graph_builder.py  main.py  mock_data.py  requirements.txt  requirements_windows.txt  schemas.py  (+8 more)
(+1949 files in other folders)
