[package]
name = "worldos-grpc"
version = "0.1.0"
edition = "2021"
description = "WorldOS V6 gRPC server (simulation engine stub)"

[dependencies]
tracing = "0.1"

tokio = { version = "1", features = ["full"] }
tonic = "0.12"
worldos-core = { path = "../worldos-core" }
worldos-rules = { path = "../worldos-rules" }
rand = "0.8"
prost = "0.13"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "worldos-engine"
path = "src/bin/server.rs"

[build-dependencies]
tonic-build = "0.12"
